# docalyzer

./: .flake8  .gitignore  README.md  main_shortcut.py  pyproject.toml  requirements.txt  run_check_loaders.py  technical.md  test_cli_script.sh
.github/workflows/: ci.yaml  ci.yml
src/docalyzer/: description_level.py  file_loaders.py  gemini_client.py  main.py  model_enum.py  outupt_enum.py  summarizer.py  summary_level.py
tests/: __init__.py  conftest.py  test_file_loaders.py  test_gemini_client.py  test_main.py  test_model_enum.py  test_summarizer.py
