[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docalyzer"
version = "1.0.0"
description = "File summarizer CLI for document and code files."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
docalyzer = "docalyzer.main:main"
